tests/negative/neg_write_to_constant_assign.safe
-- Test: neg_write_to_constant_assign
-- Description: Direct assignment to a local constant must be rejected.
-- Expected: REJECT write_to_constant

package neg_write_to_constant_assign

   function run
      limit : constant integer = 1

      limit = 2

